# FastApiHillel

./: Makefile  README.md  docker-compose.yaml
backend/: pyproject.toml
backend/app/: app_factory.py  main.py  settings.py
documentation/docs/: index.md
nginx/: nginx.conf
